# initial-setup

./: .gitignore  .travis.yml  README.md  meson.build  meson_options.txt
.github/workflows/: gettext.yml  main.yml  release.yml
data/: 49-io.elementary.initial-setup.pkla  application.css  initial-setup.desktop.in  initial-setup.metainfo.xml.in  io.elementary.initial-setup.appdata.xml.in  io.elementary.initial-setup.desktop.in  io.elementary.initial-setup.gresource.xml  io.elementary.initial-setup.policy  io.elementary.initial-setup.rules  meson.build
debian/: changelog  control  copyright
po/: LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bm.po  bn.po  br.po  bs.po  ca.po  ckb.po  cs.po  cu.po  cv.po  da.po  de.po  dz.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  (+84 more)
po/extra/: LINGUAS  POTFILES  ar.po  az.po  be.po  bg.po  bn.po  bs.po  ca.po  ckb.po  cs.po  cv.po  da.po  de.po  el.po  en_AU.po  en_GB.po  eo.po  es.po  et.po  eu.po  extra.pot  fa.po  fi.po  fr.po  fr_CA.po  gl.po  he.po  hi.po  hr.po  hu.po  hy.po  ia.po  id.po  is.po  it.po  ja.po  jv.po  ka.po  kn.po  (+46 more)
src/: Application.vala  Config.vala.in  MainWindow.vala  Utils.vala  meson.build
src/Helpers/: AccountsServiceInterface.vala  LocaleHelper.vala  LocationHelper.vala
src/Objects/: Configuration.vala  KeyboardLayout.vala  KeyboardVariant.vala  LocationLayout.vala  LocationVariant.vala
src/Views/: AbstractInstallerView.vala  AccountView.vala  KeyboardLayoutView.vala  LanguageView.vala  LocationView.vala  NetworkView.vala  ProgressView.vala  SoftwareView.vala  SystemView.vala  ThirdPartySoftwareView.vala
src/Widgets/: LayoutWidget.vala  VariantWidget.vala
